--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,17 @@
 <html>
 <head>
   <title>Cookbook</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+	<div class="Cookbook">
+		<h1 class="Cookbook-Header">Grandma Cookbook</h1>
+		<div class="Recipes-Container">
+			<%= yield %>
+		</div>
+	</div>
 
 </body>
 </html>
